--- a/Louvain_tutorial.ipynb
+++ b/Louvain_tutorial.ipynb
@@ -131,7 +131,7 @@
    "source": [
     "Modularity was priginally defined in Newman's 2004 paper to be\n",
     "\\begin{equation}\n",
-    "Q=\\sum_{c}\\left(e\\_{cc}-a\\_{c}^{2}\\right)\n",
+    "Q=\\\\sum_{c}\\\\left(e_{cc}-a_{c}^{2}\\\\right)\n",
     "\\end{equation}\n",
     "where $e_{cc}$ denotes the fraction of the total weight of edges that both begin and end at nodes of color $c$, and $a_{c}$ is the fraction of weight the total weight of edges that end (or begin) at nodes of color $c$. \n",
     "\n",
@@ -139,7 +139,7 @@
     "The Louvain paper refers to \n",
     "The definition given in the louvain paper is expressed differently as\n",
     "\\begin{equation}\n",
-    "Q=\\frac{1}{S}\\sum\\_{i,j}\\left[w_{ij}-\\frac{s_{i}s_{j}}{S}\\right]\\delta(c_{i},c_{j})\n",
+    "Q=\\frac{1}{S}\\sum_{i,j}\\left[w_{ij}-\\frac{s_{i}s_{j}}{S}\\right]\\delta(c_{i},c_{j})\n",
     "\\end{equation}\n",
     "where $w_{ij}$ is the weight of the edge between $i$ and $j$, $s_{i}=\\sum_{j}w_{ij}$, and $S=\\sum_{i}s_{i}$. The $\\delta$ used here is the Kronecker delta  function; $\\delta(x,y)=1$ if $x=y$, and 0 otherwise. The notation $\\sum_{ij}$ means the sum over all elements in a matrix, in this case it is the matrix whose $i,j$th element is $w_{ij}-s_{i}s_{j}/S$. Note that this is not the same as the sum over all pairs of nodes since it counts each pair of nodes twice (with the exception of pairs that consist of the same node twice). \n",
     "\n",
