One more attempt

--- a/Louvain_tutorial.ipynb
+++ b/Louvain_tutorial.ipynb
@@ -130,9 +130,9 @@
    "metadata": {},
    "source": [
     "Modularity was priginally defined in Newman's 2004 paper to be\n",
-    "\\begin{equation}\n",
-    "Q=\\\\sum_{c}\\\\left(e_{cc}-a_{c}^{2}\\\\right)\n",
-    "\\end{equation}\n",
+    "$$\n",
+    "Q=\\sum_{c}\\left(e_{cc}-a_{c}^{2}\\right)\n",
+    "$$\n",
     "where $e_{cc}$ denotes the fraction of the total weight of edges that both begin and end at nodes of color $c$, and $a_{c}$ is the fraction of weight the total weight of edges that end (or begin) at nodes of color $c$. \n",
     "\n",
     "### A note of the definition of modularity\n",
