--- a/Louvain_tutorial.ipynb
+++ b/Louvain_tutorial.ipynb
@@ -138,37 +138,30 @@
     "### A note of the definition of modularity\n",
     "The Louvain paper refers to \n",
     "The definition given in the louvain paper is expressed differently as\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "Q=\\frac{1}{S}\\sum_{i,j}\\left[w_{ij}-\\frac{s_{i}s_{j}}{S}\\right]\\delta(c_{i},c_{j})\n",
-    "\\end{equation}\n",
+    "$$\n",
     "where $w_{ij}$ is the weight of the edge between $i$ and $j$, $s_{i}=\\sum_{j}w_{ij}$, and $S=\\sum_{i}s_{i}$. The $\\delta$ used here is the Kronecker delta  function; $\\delta(x,y)=1$ if $x=y$, and 0 otherwise. The notation $\\sum_{ij}$ means the sum over all elements in a matrix, in this case it is the matrix whose $i,j$th element is $w_{ij}-s_{i}s_{j}/S$. Note that this is not the same as the sum over all pairs of nodes since it counts each pair of nodes twice (with the exception of pairs that consist of the same node twice). \n",
     "\n",
     "Here I will explain why these two definitions are not the same. First, if $G$ is a graph and $G_{c}$ is the subgraph of nodes of color $c$ then \n",
     " $e_{cc}$ is defined as\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "e_{cc}=\\frac{1}{W}\\sum_{(i,j)\\in G_{c}}w_{ij}\n",
-    "\\end{equation}\n",
+    "$$\n",
     "where $W$ is the total weight of the graph, and  \n",
-    "\\begin{equation}\n",
+    "$$\n",
     "W=\\sum_{(i,j)\\in G}w_{ij}=\\frac{1}{2}\\left[S+\\sum_{i}w_{ii}\\right].\n",
-    "\\end{equation}\n",
+    "$$\n",
     "To make it look more like the first term in the Louvain equation we note that \n",
-    "\\begin{equation}\n",
+    "$$\n",
     "\\sum_{(i,j)\\in G_{c}}w_{ij}=\\frac{1}{2}\\left[\\sum_{i,j}w_{ij}+\\sum_{i}w_{ii}\\right]\\delta(c,c_{i})\\delta(c,c_{j})\n",
-    "\\end{equation}\n",
+    "$$\n",
     "so \n",
-    "\\begin{equation}\n",
+    "$$\n",
     "e_{cc}=\\frac{1}{2W}\\left[\\sum_{i,j}w_{ij}+\\sum_{i}w_{ii}\\right]\\delta(c,c_{i})\\delta(c,c_{j}).\n",
-    "\\end{equation}\n",
+    "$$\n",
     "\n",
-    "Next, the Newman paper defines $a_{c}$ as fraction of the weight of edges that connect to nodes of color $c$. It then goes on to say that in a randomly colored graph the expectation is $e_{c1c2}=a_{c1}a_{c2}$ but this is incorrect. Consider the following graph:\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "Next, the Newman paper defines $a_{c}$ as fraction of the weight of edges that connect to nodes of color $c$. It then goes on to say that in a randomly colored graph the expectation is $e_{c1c2}=a_{c1}a_{c2}$ but this is incorrect. Consider the following graph:"
    ]
   },
   {
@@ -209,26 +202,26 @@
    "metadata": {},
    "source": [
     "Here $a_{red}=3/4$ and $a_{blue}=3/4$ which means the null expectation for the fraction of weight between red and red is $9/16$, the same for edges between blue and blue, and the same for edges between red and blue. Adding these together we ought to get $1$ but instead we get $27/16$. A better definition (that appears to have been used in the  Louvain definition of modularity) is that $a_{c}$ is the fraction of ends of edges that are attached to nodes of color $c$,\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "a_{c}=\\frac{1}{S}\\sum_{i\\in G_{c}}s_{i}.\n",
-    "\\end{equation}\n",
+    "$$\n",
     "Now the expectation for the weight of edges between red and red is $(1/2)\\times(1/2)$ and its the same for blue and blue. For edges that go from one color to the other, the expectation is $2\\times(1/2)\\times(1/2)$ since there are effectively two ways that the edge can be placed, either the red stub could be selected then the blue one, or the blue one is selected first then the red. From this definition the sum of these expected fractions is $1$, as it should be.\n",
     "\n",
     "For Newman's formula we need to know $a_{c}^{2}$. Noting that\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "\\begin{split}\n",
     "a_{c}^{2}&=\\frac{1}{S^{2}}\\left[\\sum_{i\\in G_{c}}s_{i}\\right]^{2}\\\\\n",
     "&=\\frac{1}{S^{2}}\\sum_{i,j}s_{i}s_{j}\\delta(c,c_{i})\\delta(c,c_{j})\n",
     "\\end{split}\n",
-    "\\end{equation}\n",
+    "$$\n",
     "we have \n",
-    "\\begin{equation}\n",
+    "$$\n",
     "Q=\\sum_{c}\\left[\\sum_{i,j}w_{ij}+\\sum_{i}w_{ii}\\right]\\delta(c,c_{i})\\delta(c,c_{j})-\\sum_{i,j}s_{i}s_{j}\\delta(c,c_{i})\\delta(c,c_{j})\n",
-    "\\end{equation}\n",
+    "$$\n",
     "which can be rewritten\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "Q=\\sum_{i,j}\\left[\\frac{w_{ij}}{2W}-\\frac{s_{i}s_{j}}{S^{2}}\\right]\\delta(c_{i},c_{j})+\\sum_{i}\\frac{w_{ii}}{2W}.\n",
-    "\\end{equation}\n",
+    "$$\n",
     "Comparing this to the definition given in the Louvain paper we see two differences: an extra term that depends on the weight of the self-loops, and that the two terms within the sum have different denominators. If the network contains no self-loops then $S=2W$ and the two definitions become equivalent to each other. In other words, Newman's definition of modularity and the version used in the Louvain paper are only the same if there are no self-loops.\n",
     "\n",
     "To make the calculation of modularity as fast as possible we can reduce the number of operations by summing over each distinct pair of nodes in the network rather than summing over every matrix element. First lets get a list of the nodes,"
@@ -294,13 +287,13 @@
     "Notice that when we read the edge from the network we sort it. This prevents the same edge form appearing twice in the dictionary.\n",
     "\n",
     "The sum over matrix elements ($\\sum_{i,j}$) relates to the sum over distinct pairs of nodes ($\\sum_{(i,j)}$) in the following way:\n",
-    "\\begin{equation}\n",
+    "$$\n",
     "\\sum_{(i,j)}w_{ij}=\\frac{1}{2}\\left[\\sum_{i,j}w_{ij}+\\sum_{i}w_{ii}\\right].\n",
-    "\\end{equation}\n",
+    "$$\n",
     "and so the modularity equation can be expressed as \n",
-    "\\begin{equation}\n",
+    "$$\n",
     "Q=\\sum_{i}\\left(\\frac{s_{i}}{S}\\right)^{2}+\\sum_{(i,j)}\\left[\\frac{w_{ij}}{W}-\\frac{2s_{i}s_{j}}{S^{2}}\\right]\\delta(c_{i},c_{j}).\n",
-    "\\end{equation}\n",
+    "$$\n",
     "\n",
     "### Computing modularity\n",
     "\n",
@@ -531,9 +524,9 @@
    "metadata": {},
    "source": [
     "The first part of the procedure is to compute the change in modularity that occurs when the color of a node changes. For a node, $i$ that changes color from $c1$ to $c2$ the magnitude of this change is \n",
-    "\\begin{equation}\n",
+    "$$\n",
     "\\Delta Q=\\frac{w_{i,c2}}{W}-\\frac{2s_{i}(s_{i}+w_{c2})}{S^{2}}-\\frac{w_{i,c1}}{W}+\\frac{2s_{i}w_{c1}}{S^{2}}\n",
-    "\\end{equation}\n",
+    "$$\n",
     "\n",
     "Where $w_{i,c}$ denotes the weight of edges adjacent to $i$ that link to nodes of color $c$, initially this is "
    ]
